--- a/style.css
+++ b/style.css
@@ -397,6 +397,10 @@ section.cards section.wrapper div.card-container {
   align-items: center;
   background-image: url(./Assets/how\ it\ work\ -\ path.svg);
   background-repeat: no-repeat;
+  background-size: 76%;
+  background-position: left 26px right;
+  background-position: left 30px right 40px;
+  background-position: center 30px;
 }
 section.cards section.wrapper div.card-container div.item1 {
   width: 33%;
@@ -493,4 +497,83 @@ section.cards section.wrapper div.card-container div.item3 div.content p {
   margin-top: 15px;
   line-height: 25px;
   font-weight: 600;
+}
+section#middle { 
+
+}
+
+section#middle section.wrapper { 
+
+}
+
+section#middle section.wrapper div.top { 
+
+}
+
+section#middle section.wrapper div.top div.left { 
+
+}
+
+section#middle section.wrapper div.top div.left img { 
+
+}
+
+section#middle section.wrapper div.top div.right { 
+
+}
+
+section#middle section.wrapper div.top div.right h3 { 
+
+}
+
+section#middle section.wrapper div.top div.right p { 
+
+}
+
+section#middle section.wrapper div.top div.right div.box-container { 
+
+}
+
+section#middle section.wrapper div.top div.right div.box-container div.box { 
+
+}
+
+section#middle section.wrapper div.top div.right div.box-container div.box div.image { 
+
+}
+
+section#middle section.wrapper div.top div.right div.box-container div.box div.image img { 
+
+}
+
+section#middle section.wrapper div.top div.right div.box-container div.box h5 { 
+
+}
+
+section#middle section.wrapper div.top div.bottom { 
+
+}
+
+section#middle section.wrapper div.top div.bottom div.left { 
+
+}
+
+section#middle section.wrapper div.top div.bottom div.left h3 { 
+
+}
+
+section#middle section.wrapper div.top div.bottom div.left p { 
+
+}
+
+section#middle section.wrapper div.top div.bottom div.left a.button { 
+
+}
+
+section#middle section.wrapper div.top div.bottom div.right { 
+
+}
+
+section#middle section.wrapper div.top div.bottom div.right img { 
+
 }
