--- a/style.css
+++ b/style.css
@@ -1,227 +1,4 @@
-* {
-  padding: 0px;
-  margin: 0px;
-}
-ul li {
-  list-style: none;
-}
-body {
-  font-family: gorditaregular;
-  text-decoration: none;
-}
-.wrapper {
-  width: 90%;
-  margin: 0px auto;
-}
-@font-face {
-  font-family: gorditamedium_italic;
-  src: url("../Font/gordita_medium_italic-webfont.woff") format("woff2"),
-    url("../Font/gordita_medium_italic-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: gorditamedium;
-  src: url("../Font/gordita_medium-webfont.woff2") format("woff2"),
-    url("../Font/gordita_medium-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: gorditaregular_italic;
-  src: url("../Font/gordita_regular_italic-webfont.woff2") format("woff2"),
-    url("../Font/gordita_regular_italic-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: gorditaregular;
-  src: url("../Font/gordita_regular-webfont.woff2") format("woff2"),
-    url("../Font/gordita_regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-section#main {
-}
-section#main section.wrapper {
-}
-section#main section.wrapper header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px 0px 40px;
-}
-section#main section.wrapper header nav.left {
-  width: 10%;
-}
-section#main section.wrapper header nav.left h1 {
-}
-section#main section.wrapper header nav.left h1 a {
-}
-section#main section.wrapper header nav.left h1 a img {
-  display: block;
-  width: 100%;
-}
-section#main section.wrapper header nav.middle {
-}
-section#main section.wrapper header nav.middle ul {
-  display: flex;
-}
-section#main section.wrapper header nav.middle ul li {
-  margin-right: 60px;
-  font-size: 18px;
-}
-section#main section.wrapper header nav.middle ul li:last-child {
-  margin-right: 0px;
-}
-section#main section.wrapper header nav.middle ul li a {
-  text-decoration: none;
-  text-transform: capitalize;
-  color: rgb(136, 131, 152);
-}
-section#main section.wrapper header nav.middle ul li a:hover {
-  border-bottom: 3px solid rgb(228, 95, 131);
-  color: black;
-  font-weight: 600;
-}
-section#main section.wrapper header nav.middle ul li:first-child {
-  border-bottom: 3px solid rgb(228, 95, 131);
-}
-section#main section.wrapper header nav.middle ul li a.hm:first-child {
-  color: black;
-  font-weight: 600;
-}
-section#main section.wrapper header nav.right {
-}
-section#main section.wrapper header nav.right a.login-btn {
-  color: rgb(136, 131, 152);
-  text-decoration: none;
-}
-section#main section.wrapper header nav.right a.signup-btn {
-  text-decoration: none;
-  background: rgb(228, 95, 131);
-  padding: 18px 37px;
-  border-radius: 10px;
-  color: rgb(255, 255, 255);
-  margin-left: 35px;
-}
-section#main section.wrapper section.spotlight {
-  display: flex;
-  justify-content: space-between;
-}
-section#main section.wrapper section.spotlight div.left {
-  width: 32%;
-  background-color: rgb(248, 248, 250);
-  padding: 126px;
-}
-section#main section.wrapper section.spotlight div.left p {
-  color: rgb(136, 131, 152);
-  font-weight: 600;
-  font-size: 20px;
-}
-section#main section.wrapper section.spotlight div.left p.para {
-  color: rgb(136, 131, 152);
-  margin: 10px 0px 25px;
-  font-size: 18px;
-}
-section#main section.wrapper section.spotlight div.left h1 {
-  font-size: 60px;
-  font-family: gorditamedium;
-}
-section#main section.wrapper section.spotlight div.left a.get-btn {
-  text-decoration: none;
-  background: rgb(228, 95, 131);
-  padding: 18px 40px;
-  border-radius: 10px;
-  color: rgb(255, 255, 255);
-  display: inline-block;
-}
-section#main section.wrapper section.spotlight div.right {
-  width: 60%;
-}
-section#main section.wrapper section.spotlight div.right img {
-  display: block;
-  width: 100%;
-}
-section.cards {
-  padding: 80px 0px;
-}
-section.cards section.wrapper {
-}
-section.cards section.wrapper div.head {
-}
-section.cards section.wrapper div.head h2 {
-  text-transform: capitalize;
-  font-size: 40px;
-  text-align: center;
-  font-weight: bold;
-}
-section.cards section.wrapper div.head p {
-  color: gray;
-  text-align: center;
-  font-weight: 600;
-  margin: 30px auto 0px;
-  width: 32%;
-  line-height: 30px;
-}
-section.cards section.wrapper div.card-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-section.cards section.wrapper div.card-container div.item1 {
-}
-section.cards section.wrapper div.card-container div.item1 div.image {
-  display: block;
-  width: 100%;
-}
-section.cards section.wrapper div.card-container div.item1 div.image img {
-  display: block;
-  width: 100%;
-}
-section.cards section.wrapper div.card-container div.item1 div.content {
-  margin: 0px auto;
-  width: 45%;
-}
-section.cards section.wrapper div.card-container div.item1 div.content h3 {
-  text-transform: capitalize;
-  font-size: 30px;
-}
-section.cards section.wrapper div.card-container div.item1 div.content p {
-  color: gray;
-  margin-top: 15px;
-  line-height: 25px;
-  font-weight: 600;
-}
-section.cards section.wrapper div.card-container div.item2 {
-}
-section.cards section.wrapper div.card-container div.item2 div.image {
-  width: 100%;
-}
-section.cards section.wrapper div.card-container div.item2 div.image img {
-  display: block;
-  width: 100%;
-}
-section.cards section.wrapper div.card-container div.item2 div.content {
-}
-section.cards section.wrapper div.card-container div.item2 div.content h3 {
-}
-section.cards section.wrapper div.card-container div.item2 div.content p {
-}
-section.cards section.wrapper div.card-container div.item3 {
-}
-section.cards section.wrapper div.card-container div.item3 div.image {
-}
-section.cards section.wrapper div.card-container div.item3 div.image img {
-  display: block;
-  width: 100%;
-}
-section.cards section.wrapper div.card-container div.item3 div.content {
-}
-section.cards section.wrapper div.card-container div.item3 div.content h3 {
-}
-section.cards section.wrapper div.card-container div.item3 div.content p {
-}
+
 * {
   padding: 0px;
   margin: 0px;
@@ -411,18 +188,22 @@ section.cards section.wrapper div.card-container div.item1 div.image img {
   width: 100%;
 }
 section.cards section.wrapper div.card-container div.item1 div.content {
-  margin: 0px auto;
-  width: 40%;
+  /* margin: 0px auto; */
+  /* width: 40%; */
 }
 section.cards section.wrapper div.card-container div.item1 div.content h3 {
   text-transform: capitalize;
   font-size: 30px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 section.cards section.wrapper div.card-container div.item1 div.content p {
   color: gray;
-  margin-top: 15px;
+  /* margin-bottom: 15px; */
   line-height: 25px;
-  font-weight: 600;
+  font-weight: 500;
+  width: 40%;
+  margin: 0 auto;
 }
 section.cards section.wrapper div.card-container div.item2 {
   width: 33%;
@@ -437,18 +218,22 @@ section.cards section.wrapper div.card-container div.item2 div.image img {
   width: 100%;
 }
 section.cards section.wrapper div.card-container div.item2 div.content {
-  margin: 0px auto;
-  width: 45%;
+  /* margin: 0px auto; */
+  /* width: 45%; */
 }
 section.cards section.wrapper div.card-container div.item2 div.content h3 {
   text-transform: capitalize;
   font-size: 30px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 section.cards section.wrapper div.card-container div.item2 div.content p {
   color: gray;
-  margin-top: 15px;
+  /* margin-top: 15px; */
   line-height: 25px;
-  font-weight: 600;
+  font-weight: 500;
+  margin: 0 auto;
+  width: 42%;
 }
 section.cards section.wrapper div.card-container div.item3 {
   width: 33%;
@@ -471,18 +256,22 @@ section.cards section.wrapper div.card-container div.item3 div.image span {
   font-size: 12px;
 }
 section.cards section.wrapper div.card-container div.item3 div.content {
-  margin: 0px auto;
-  width: 56%;
+  /* margin: 0px auto; */
+  /* width: 56%; */
 }
 section.cards section.wrapper div.card-container div.item3 div.content h3 {
   text-transform: capitalize;
   font-size: 30px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 section.cards section.wrapper div.card-container div.item3 div.content p {
+  margin: 0 auto;
   color: gray;
-  margin-top: 15px;
+  /* margin-top: 15px; */
   line-height: 25px;
-  font-weight: 600;
+  font-weight: 500;
+  width: 56%;
 }
 section#middle {
   padding: 100px 0px 50px;
@@ -642,22 +431,17 @@ section#footer {
 section#footer section.wrapper {
 }
 section#footer section.wrapper div.container {
-  padding: 100px 100px 30px 100px;
+  padding: 100px 100px 30px;
   background: rgb(248, 248, 250);
 }
 section#footer section.wrapper div.container div.box-container {
   display: flex;
   justify-content: space-between;
 }
-section#footer section.wrapper div.container  p.ft {
-
-text-align: center;
-
-color: gray;
-
-margin-top: 70px;
-
-/* margin: 0 auto; */
+section#footer section.wrapper div.container p.ft {
+  text-align: center;
+  color: gray;
+  margin-top: 70px;
 }
 section#footer section.wrapper div.container div.box-container ul {
 }
@@ -679,6 +463,7 @@ section#footer section.wrapper div.container div.box-container ul li {
 }
 section#footer section.wrapper div.container div.box-container ul h4 {
   text-transform: capitalize;
+  margin-bottom: 30px;
 }
 section#footer section.wrapper div.container div.box-container ul li p {
   font-size: 15px;
@@ -691,6 +476,8 @@ section#footer section.wrapper div.container div.box-container ul li a {
   text-decoration: none;
   text-transform: capitalize;
   color: gray;
+  font-weight: 600;
+  font-size: 15px;
 }
 section#footer section.wrapper div.container div.box-container ul div.image1 {
   display: inline-block;
@@ -699,73 +486,52 @@ section#footer section.wrapper div.container div.box-container ul div.image1 {
   margin-right: 15px;
   padding: 7px 15px;
 }
-section#footer section.wrapper div.container div.box-container ul div.image1 {
+
+@media all and (max-width:1440px){
+    section#main section.wrapper section.spotlight div.left h1 {
+      font-size: 55px;
+    }
+    section.cards section.wrapper div.head p { 
+      width:36%;
+  }
+  section.cards section.wrapper div.card-container div.item1 div.content p {
+  font-size: 13px;
+  }
+  section.cards section.wrapper div.card-container div.item2 div.content h3 {
+    font-size: 28px;
+  }
+  section.cards section.wrapper div.card-container div.item2 div.content p {
+    font-size: 13px;
+  }
+  section.cards section.wrapper div.card-container div.item3 div.content p {
+    font-size: 13px;
+  }
+  section#middle section.wrapper div.top div.right p {
+    font-weight: 600;
+    font-size: 14px;
+  }
+  section#middle section.wrapper div.bottom div.left h3 {
+    font-size: 38px;
+  }
+  section#middle section.wrapper div.bottom div.left p{
+
+    font-weight: 600;
+
+    font-size: 13px;
+
+  } 
 }
-section#footer
-  section.wrapper
-  div.container
-  div.box-container
-  ul
-  div.image1
-  img {
-}
-section#footer
-  section.wrapper
-  div.container
-  div.box-container
-  ul
-  div.image-container {
-}
-section#footer
-  section.wrapper
-  div.container
-  div.box-container
-  ul
-  div.image-container
-  div.facebook {
-}
-section#footer
-  section.wrapper
-  div.container
-  div.box-container
-  ul
-  div.image-container
-  div.facebook
-  img {
-}
-section#footer
-  section.wrapper
-  div.container
-  div.box-container
-  ul
-  div.image-container
-  div.twitter {
-}
-section#footer
-  section.wrapper
-  div.container
-  div.box-container
-  ul
-  div.image-container
-  div.twitter
-  img {
-}
-section#footer
-  section.wrapper
-  div.container
-  div.box-container
-  ul
-  div.image-container
-  div.linkedin {
-}
-section#footer
-  section.wrapper
-  div.container
-  div.box-container
-  ul
-  div.image-container
-  div.linkedin
-  img {
-}
-section#footer section.wrapper div.container p {
-}
+@media all and (max-width:1280px){
+  section#main section.wrapper section.spotlight div.left{
+    width:40%;
+    padding:48px;
+   }
+   section.cards section.wrapper div.head p {
+    width: 45%;
+  }
+  section.cards section.wrapper div.card-container{
+ 
+    background-position:center 84px;
+  }
+  
+} 
